[fix] Fixed spacing issue in progress bar

--- a/openwisp_firmware_upgrader/static/firmware-upgrader/css/upgrade-progress.css
+++ b/openwisp_firmware_upgrader/static/firmware-upgrader/css/upgrade-progress.css
@@ -55,7 +55,6 @@
 }
 
 .upgrade-progress-text {
-  margin-left: 10px;
   color: #000;
   font-weight: bold;
   font-size: 12px;
